--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hello World</title>
+    <title>Hello World Beautiful Lucy Loan</title>
 </head>
 <body>
     <h1>Hello, World!</h1>
